add basic layout to the "keyboard"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">SemaPhoreBetterOrWorse</string>
-    <string name="semaphor_service_label">SemaPhoreBetterOrWorse label</string>
+    <string name="semaphor_service_label">SemaPhoreBetterOrWorse</string>
     <string name="subtype_en_US">English (US)</string>
 </resources>
