Misguided attempt to send notification to band

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">SemaPhoreBetterOrWorse</string>
     <string name="semaphor_service_label">SemaPhoreBetterOrWorse</string>
     <string name="subtype_en_US">English (US)</string>
+    <string name="title_activity_main">MainActivity</string>
 </resources>
