added connection status changes based on if the bands are connected

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="semaphor_service_label">SemaPhoreBetterOrWorse</string>
     <string name="subtype_en_US">English (US)</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="disconnected">Disconnected</string>
+    <string name="connected">Connected</string>
+    <string name="left_band">Left Band</string>
+    <string name="right_band">Right Band</string>
 </resources>
